--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-server": "^4.2.1"
   },
   "dependencies": {
+    "@recogito/recogito-js": "^1.4.1",
     "pdfjs-dist": "^2.9.359",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
