--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@recogito/recogito-js": "^1.4.1",
     "pdfjs-dist": "^2.9.359",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0"
   }
 }
