--- a/package.json
+++ b/package.json
@@ -29,11 +29,23 @@
     "@babel/plugin-proposal-class-properties": "^7.8.0",
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
-    "@babel/preset-react": "^7.9.0"
+    "@babel/preset-react": "^7.9.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.7",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.2",
+    "sass": "^1.35.2",
+    "sass-loader": "^10.2.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.1"
   },
   "dependencies": {
     "@recogito/recogito-js": "^1.4.2",
     "pdfjs-dist": "2.9.359",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-icons": "^4.2.0"
   }
 }
