--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "A React component for annotating PDF, powered by PDF.js and RecogitoJS",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack serve  --mode development --open",
-    "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve  --mode development --open"
   },
   "repository": {
     "type": "git",
