--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@recogito/annotorious": "github:recogito/annotorious",
+    "@recogito/recogito-connections": "^0.1.1",
     "@recogito/recogito-js": "^1.5.4",
     "pdfjs-dist": "2.9.359",
     "react-icons": "^4.2.0",
