--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-icons": "^4.2.0",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.3.1",
+    "file-saver":"^2.0.5"
   }
 }
